Using TDC API to use as example

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">ReactIntegrationApp</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="title_activity_inner">InnerActivity</string>
+    <string name="title_native">Nativo</string>
+    <string name="title_react">React-Native</string>
+    <string name="title_activity_events">Modalidades</string>
+    <string name="title_activity_talks">Palestras</string>
 </resources>
